fix: make the full stack start and work end to end, secure borrows
- Backend: remove stray character breaking compilation; break the
  JwtService/WebSecurityConfiguration circular dependency (@Lazy) that
  crash-looped the app; add actuator dependency for the healthcheck.
- Security: /borrow endpoints now restrict users to their own loans
  (Admin/BIBLIOTHECAIRE keep full access); tests updated and added.
- Data: Flyway V2 seeds local users mirroring the Keycloak realm, roles
  and a demo catalogue; V3 lowercases usernames to match Keycloak's
  preferred_username.
- API errors: 400 on unknown sort property, 409 on duplicate username,
  400 on malformed body/parameter types; generic errors logged with trace.
- Frontend: working toast notifications, fresh header name after login,
  session cleared on failed login/401, lists refreshed after borrow/return,
  valid table markup, numeric copies input, paginated API responses mapped.
- Infra: recreate-safe Postgres/nginx capabilities, IPv4 frontend
  healthcheck, Keycloak 24 admin variables, 30 min access tokens,
  configurable host ports documented in .env.example.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01A3hz6xJTaDvsAj1p7w4HSR